--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,9 @@ version = "0"
 description = "Standard logging library for product"
 authors = []
 license = "MIT"
+readme = "README.md"
+homepage = "https://deeperinsights.com"
+repository = "https://github.com/skimit/di-logging"
 include = [
     { path = "LICENSE", format = ["sdist", "wheel"] },
     { path = "README.md", format = "sdist" },
